--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,8 +5,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
-  <title>Electro - HTML Ecommerce Template</title>
+
+  <title>Bentilzone - Angular Shop</title>
 
   <!-- Google font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
